# brightness

./: .clang-format  CMakeLists.txt  Info.plist  LICENSE  Package.swift  README.md  logo.icns  main.c  main.swift  resource.h  resource.rc
.github/workflows/: ci.yml
